# deep-dependency

./: .gitignore  README.md
dismiss/: README.md  pyproject.toml
dismiss/pkgs/suba/: pyproject.toml
dismiss/pkgs/suba/pkgs/subc/: pyproject.toml
dismiss/pkgs/suba/pkgs/subc/subc/: __init__.py
dismiss/pkgs/subb/: pyproject.toml
success/: README.md  pyproject.toml
success/pkgs/suba/: pyproject.toml
success/pkgs/suba/suba/: __init__.py
success/pkgs/subb/: pyproject.toml
success/pkgs/subb/subb/: __init__.py
success/pkgs/subc/: pyproject.toml
success/success/: __init__.py
