[tool.poetry]
name = "success"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <105337464+KAkikakuFukuhara@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
suba = {path = "pkgs/suba", develop = true}
subb = {path = "pkgs/subb", develop = true}
subc = {path = "pkgs/subc", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
